--- a/exercicio/ex022/fundo006.html
+++ b/exercicio/ex022/fundo006.html
@@ -10,7 +10,7 @@
             background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
             background-position: center center;
-            background-repeat: no-repeat;
+            background-repeat: repeat-y;
             background-size: cover;
         }
 
@@ -28,6 +28,10 @@
     <main>
         <h1>Teste de Imagem de Fundo</h1>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit, voluptas! Dolores aliquam debitis recusandae rerum explicabo suscipit ex, eligendi odio quia tempore id qui animi magnam at repellendus. Aut, est! Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi similique distinctio, voluptate eius ad vel consequatur eveniet et, quis accusamus quod, dolores amet. Vel maiores neque consequuntur aliquid aliquam nulla.
+         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Expedita, molestias officiis? Corrupti quasi impedit quo exercitationem iste veritatis vero nesciunt, molestias, iure aliquam labore tempora perferendis tenetur, voluptates quae possimus!Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit, voluptas! Dolores aliquam debitis recusandae rerum explicabo suscipit ex, eligendi odio quia tempore id qui animi magnam at repellendus. Aut, est! Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi similique distinctio, voluptate eius ad vel consequatur eveniet et, quis accusamus quod, dolores amet. Vel maiores neque consequuntur aliquid aliquam nulla.
+         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Expedita, molestias officiis? Corrupti quasi impedit quo exercitationem iste veritatis vero nesciunt, molestias, iure aliquam labore tempora perferendis tenetur, voluptates quae possimus!Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit, voluptas! Dolores aliquam debitis recusandae rerum explicabo suscipit ex, eligendi odio quia tempore id qui animi magnam at repellendus. Aut, est! Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi similique distinctio, voluptate eius ad vel consequatur eveniet et, quis accusamus quod, dolores amet. Vel maiores neque consequuntur aliquid aliquam nulla.
+         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Expedita, molestias officiis? Corrupti quasi impedit quo exercitationem iste veritatis vero nesciunt, molestias, iure aliquam labore tempora perferendis tenetur, voluptates quae possimus!Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit, voluptas! Dolores aliquam debitis recusandae rerum explicabo suscipit ex, eligendi odio quia tempore id qui animi magnam at repellendus. Aut, est! Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi similique distinctio, voluptate eius ad vel consequatur eveniet et, quis accusamus quod, dolores amet. Vel maiores neque consequuntur aliquid aliquam nulla.
+         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Expedita, molestias officiis? Corrupti quasi impedit quo exercitationem iste veritatis vero nesciunt, molestias, iure aliquam labore tempora perferendis tenetur, voluptates quae possimus!Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit, voluptas! Dolores aliquam debitis recusandae rerum explicabo suscipit ex, eligendi odio quia tempore id qui animi magnam at repellendus. Aut, est! Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi similique distinctio, voluptate eius ad vel consequatur eveniet et, quis accusamus quod, dolores amet. Vel maiores neque consequuntur aliquid aliquam nulla.
          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Expedita, molestias officiis? Corrupti quasi impedit quo exercitationem iste veritatis vero nesciunt, molestias, iure aliquam labore tempora perferendis tenetur, voluptates quae possimus!</p>
     </main>
 </body>
