--- a/exercicio/ex022/fundo006.html
+++ b/exercicio/ex022/fundo006.html
@@ -3,20 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo Fixo de Tela</title>
     <style>
         body {
-            height: 100vh;
+            height: 100vh; 
+            /*
             background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
             background-position: center center;
-            background-repeat: repeat-y;
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment: fixed;*/
+
+            background: black url('imagens/wallpaper002.jpg')  center center no-repeat fixed;
             background-size: cover;
         }
 
+
         main {
             background-color: white;
-            width: 400px;
+            max-width: 700px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -27,12 +33,12 @@
 <body>
     <main>
         <h1>Teste de Imagem de Fundo</h1>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit, voluptas! Dolores aliquam debitis recusandae rerum explicabo suscipit ex, eligendi odio quia tempore id qui animi magnam at repellendus. Aut, est! Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi similique distinctio, voluptate eius ad vel consequatur eveniet et, quis accusamus quod, dolores amet. Vel maiores neque consequuntur aliquid aliquam nulla.
-         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Expedita, molestias officiis? Corrupti quasi impedit quo exercitationem iste veritatis vero nesciunt, molestias, iure aliquam labore tempora perferendis tenetur, voluptates quae possimus!Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit, voluptas! Dolores aliquam debitis recusandae rerum explicabo suscipit ex, eligendi odio quia tempore id qui animi magnam at repellendus. Aut, est! Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi similique distinctio, voluptate eius ad vel consequatur eveniet et, quis accusamus quod, dolores amet. Vel maiores neque consequuntur aliquid aliquam nulla.
-         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Expedita, molestias officiis? Corrupti quasi impedit quo exercitationem iste veritatis vero nesciunt, molestias, iure aliquam labore tempora perferendis tenetur, voluptates quae possimus!Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit, voluptas! Dolores aliquam debitis recusandae rerum explicabo suscipit ex, eligendi odio quia tempore id qui animi magnam at repellendus. Aut, est! Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi similique distinctio, voluptate eius ad vel consequatur eveniet et, quis accusamus quod, dolores amet. Vel maiores neque consequuntur aliquid aliquam nulla.
-         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Expedita, molestias officiis? Corrupti quasi impedit quo exercitationem iste veritatis vero nesciunt, molestias, iure aliquam labore tempora perferendis tenetur, voluptates quae possimus!Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit, voluptas! Dolores aliquam debitis recusandae rerum explicabo suscipit ex, eligendi odio quia tempore id qui animi magnam at repellendus. Aut, est! Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi similique distinctio, voluptate eius ad vel consequatur eveniet et, quis accusamus quod, dolores amet. Vel maiores neque consequuntur aliquid aliquam nulla.
-         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Expedita, molestias officiis? Corrupti quasi impedit quo exercitationem iste veritatis vero nesciunt, molestias, iure aliquam labore tempora perferendis tenetur, voluptates quae possimus!Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit, voluptas! Dolores aliquam debitis recusandae rerum explicabo suscipit ex, eligendi odio quia tempore id qui animi magnam at repellendus. Aut, est! Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi similique distinctio, voluptate eius ad vel consequatur eveniet et, quis accusamus quod, dolores amet. Vel maiores neque consequuntur aliquid aliquam nulla.
-         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Expedita, molestias officiis? Corrupti quasi impedit quo exercitationem iste veritatis vero nesciunt, molestias, iure aliquam labore tempora perferendis tenetur, voluptates quae possimus!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem natus laborum, laudantium quisquam sit odio alias consequuntur velit eligendi adipisci culpa incidunt architecto, est esse repellat excepturi. Numquam, repudiandae libero. Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi tenetur fuga, veniam vel at porro? Ab commodi, consequuntur animi in earum nulla at alias est dolor enim, culpa praesentium blanditiis? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos dolorem error, fugit perspiciatis at autem illo facere, labore eum atque asperiores corporis! Itaque tenetur praesentium ad. Praesentium nam eos laboriosam?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem natus laborum, laudantium quisquam sit odio alias consequuntur velit eligendi adipisci culpa incidunt architecto, est esse repellat excepturi. Numquam, repudiandae libero. Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi tenetur fuga, veniam vel at porro? Ab commodi, consequuntur animi in earum nulla at alias est dolor enim, culpa praesentium blanditiis? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos dolorem error, fugit perspiciatis at autem illo facere, labore eum atque asperiores corporis! Itaque tenetur praesentium ad. Praesentium nam eos laboriosam?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem natus laborum, laudantium quisquam sit odio alias consequuntur velit eligendi adipisci culpa incidunt architecto, est esse repellat excepturi. Numquam, repudiandae libero. Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi tenetur fuga, veniam vel at porro? Ab commodi, consequuntur animi in earum nulla at alias est dolor enim, culpa praesentium blanditiis? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos dolorem error, fugit perspiciatis at autem illo facere, labore eum atque asperiores corporis! Itaque tenetur praesentium ad. Praesentium nam eos laboriosam?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem natus laborum, laudantium quisquam sit odio alias consequuntur velit eligendi adipisci culpa incidunt architecto, est esse repellat excepturi. Numquam, repudiandae libero. Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi tenetur fuga, veniam vel at porro? Ab commodi, consequuntur animi in earum nulla at alias est dolor enim, culpa praesentium blanditiis? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos dolorem error, fugit perspiciatis at autem illo facere, labore eum atque asperiores corporis! Itaque tenetur praesentium ad. Praesentium nam eos laboriosam?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem natus laborum, laudantium quisquam sit odio alias consequuntur velit eligendi adipisci culpa incidunt architecto, est esse repellat excepturi. Numquam, repudiandae libero. Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi tenetur fuga, veniam vel at porro? Ab commodi, consequuntur animi in earum nulla at alias est dolor enim, culpa praesentium blanditiis? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos dolorem error, fugit perspiciatis at autem illo facere, labore eum atque asperiores corporis! Itaque tenetur praesentium ad. Praesentium nam eos laboriosam?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem natus laborum, laudantium quisquam sit odio alias consequuntur velit eligendi adipisci culpa incidunt architecto, est esse repellat excepturi. Numquam, repudiandae libero. Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi tenetur fuga, veniam vel at porro? Ab commodi, consequuntur animi in earum nulla at alias est dolor enim, culpa praesentium blanditiis? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos dolorem error, fugit perspiciatis at autem illo facere, labore eum atque asperiores corporis! Itaque tenetur praesentium ad. Praesentium nam eos laboriosam?</p>
     </main>
 </body>
 </html>
